# webassembly-rules-poc

./: PROPOSAL.md  README.md
rcp19-to-wasm/: Cargo.toml  README.md  input.json
rcp19-to-wasm/rcp19-to-wasm/: Cargo.toml  template.wasm
rcp19-to-wasm/rcp19-to-wasm-common/: Cargo.toml
rcp19-to-wasm/rcp19-to-wasm-common/src/: lib.rs
rcp19-to-wasm/rcp19-to-wasm-template/: Cargo.toml
rcp19-to-wasm/rcp19-to-wasm-template/src/: lib.rs
rcp19-to-wasm/rcp19-to-wasm/src/: main.rs
validators/assemblyscript_validator/: README.md  package-lock.json  package.json
validators/assemblyscript_validator/assembly/: index.ts  reso.ts
validators/go_validator/: README.md  go.mod  go.wasm  go_validator.go  sys.go
validators/rust_validator/: Cargo.toml  README.md
validators/rust_validator/src/: lib.rs  reso.rs
wasm/: assemblyscript.wasm  go.wasm  rcp19.wasm  rust.wasm
webassembly-rules-poc/: Cargo.toml
webassembly-rules-poc/src/: main.rs
