[package]
name = "webassembly-rules-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
colored = "2.0.4"
serde_json = "1.0.104"
wasmtime = "11.0.1"
