[package]
name = "rcp19-to-wasm-template"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rcp19-to-wasm-common = { version = "0.1.0", path = "../rcp19-to-wasm-common" }
rets_expression = "0.1.1"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
