[package]
name = "rcp19-to-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
rcp19-to-wasm-common = { version = "0.1.0", path = "../rcp19-to-wasm-common" }
rets_expression = "0.1.1"
serde_json = "1.0.104"
walrus = "0.20.1"
